deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
      - name: flask-container
        image: flask-k8s-app
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5000
